# aind-ephys-transformation

./: Dockerfile  README.md  log_config_template.yaml  pyproject.toml
.github/workflows/: tag_and_publish.yml
doc_template/source/: conf.py
scripts/: singularity_build.def
src/aind_ephys_transformation/: __init__.py  compression_utils.py  ephys_job.py  models.py  npopto_correction.py  utils.py
tests/: test_compression_utils.py  test_ephys_job.py
tests/resources/chronic-test-data/: binary_info.json  probe.json
tests/resources/chronic-test-data/OnixEphys/: OnixEphys_SampleMetadata_2025-05-13T19-00-00.json  OnixEphys_SampleMetadata_2025-05-13T20-00-00.json  OnixEphys_SampleMetadata_2025-05-13T21-00-00.json
tests/resources/chronic-test-data/OnixHarpSyncData/: OnixHarpSyncData_2025-05-13T19-00-00.csv  OnixHarpSyncData_2025-05-13T20-00-00.csv  OnixHarpSyncData_2025-05-13T21-00-00.csv
tests/resources/np_opto_corrections/: standard_positions.json
tests/resources/np_opto_corrections/settings_2022_07/: settings.xml
tests/resources/np_opto_corrections/settings_2023_04/: settings.xml
tests/resources/np_opto_corrections/settings_2024_01/: settings.xml
tests/resources/np_opto_corrections/settings_altered_no_pxi/: settings.xml
tests/resources/v0.6.x_neuropixels_fake_harp/raw.harp/: behavior.json
tests/resources/v1.1.0_neuropixels_aligned/Record Node 101/: settings.xml  settings_3.xml  settings_6.xml
tests/resources/v1.1.0_neuropixels_not_aligned/Record Node 101/: settings.xml  settings_3.xml  settings_6.xml
